condensed header and footer partials to 'margins'.

--- a/pages/index.html
+++ b/pages/index.html
@@ -121,7 +121,7 @@
     </main>
     <footer>
         <div class="logo_box">
-            <a href="index.html"><img src="logo.svg" alt="Genesis logo"></a>
+            <a href="index.html"><img src="/images/Logo.svg" alt="Genesis logo"></a>
         </div>
             <nav class="nav_wrapper">
                 <ul>
