added intro section to main

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,12 +8,12 @@
     <script src="https://kit.fontawesome.com/8f4cbc2809.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/index.css">
+
 </head>
 <body>
     <header>
-        <div class="logo_box">
             <a href="index.html"><img src="/images/Logo.svg" alt="Genesis logo"></a>
-        </div>
         <nav class="nav_wrapper">
             <ul>
                 <li><a href="./projects.html">Projects</a></li>
@@ -22,11 +22,12 @@
         </nav>
     </header>
     <main>
+        <p class="layout_title">Shooting Stars</p>
         <section class="intro">
             <div class="intro__statement">
-            <p class="title">Shooting Stars</p>
-            <h2>Hello, I’m Bakhtiyar Sattarov, <span>product designer</span> with experience
-                in studios and startups</h2>
+            <h2>Hello, I’m Bakhtiyar Sattarov, 
+                <span class="job_title">product designer</span> 
+                with experience in studios and startups</h2>
             </div>
             <div class="intro__tagline">Design is about progress</div>
         </section>
