Added gallery grid to index

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,40 +32,38 @@
             <div class="intro__tagline">Design is about progress</div>
         </section>
         <section class="gallery_grid">
-            <div><img src="/images/home/Rectangle-0.png" alt="a collage 
+            <div class="gallery_grid__zero"><img src="/images/home/Rectangle-0.png" alt="a collage 
             image of a headless feminine body in a statuesque pose"></div>
-            <div><img src="/images/home/Rectangle-1.png" alt="a figure in a
+            <div class="gallery_grid__first"><img src="/images/home/Rectangle-1.png" alt="a figure in a
             black and white outfit sitting on a cactus with a balloon over their
             face"></div>
-            <div><img src="/images/home/Rectangle-2.png" alt="a surreal image of
+          <div class="gallery_grid__second"><img src="/images/home/Rectangle-2.png" alt="a surreal image of
             a veiled figure standing in front of a sun with a tiny person on
             their head"></div>
-            <div><img src="/images/home/Rectangle-3.png" alt="a man with his
+            <div class="gallery_grid__third"><img src="/images/home/Rectangle-3.png" alt="a man with his
             back facing the camera as he stands in a field of flowers looking at
             the sun"></div>
-            <div><img src="/images/home/Rectangle-.png" alt="a collage-like
-            image of a headless feminine body"></div>
-            <div><img src="/images/home/Rectangle-4.png" alt="a portrait of a
+            <div class="gallery_grid__fourth"><img src="/images/home/Rectangle-4.png" alt="a portrait of a
             man in sunglasses that obscure his eyes as blumes of vector like
             smoke come out of his forehead"></div>
-            <div><img src="/images/home/Rectangle-5.png" alt="the statue of
+            <div class="gallery_grid__fifth"><img src="/images/home/Rectangle-5.png" alt="the statue of
             liberty in a floral print toga"></div>
-            <div><img src="/images/home/Rectangle-6.png" alt="a collage image of
+            <div class="gallery_grid__sixth"><img src="/images/home/Rectangle-6.png" alt="a collage image of
             a woman walking with yellow spheres behind her on a background of
             mountains"></div>
-            <div><img src="/images/home/Rectangle-7.png" alt="a poster reads
+            <div class="gallery_grid__seventh"><img src="/images/home/Rectangle-7.png" alt="a poster reads
             'the last of my kind everyday 302' showing a woman with her back to
             the camera in a desert"></div>
-            <div><img src="/images/home/Rectangle-8.png" alt="a portrait of a
+            <div class="gallery_grid__eighth"><img src="/images/home/Rectangle-8.png" alt="a portrait of a
             young main with his eyes closed as his face cracks in half, showing
             wildflowers in the cracks"></div>
-            <div><img src="/images/home/Rectangle-9.png" alt="a portrait of a
+            <div class="gallery_grid__ninth"><img src="/images/home/Rectangle-9.png" alt="a portrait of a
             man with a splatter of paint on his face with a checkerboard
             pattern"></div>
-            <div><img src="/images/home/Rectangle-10.png" alt="a surreal image
+            <div class="gallery_grid__tenth"><img src="/images/home/Rectangle-10.png" alt="a surreal image
             of a hillside tilted sideways; a person walks on the edge of the hillside
              with a balloon"></div>
-            <div><img src="/images/home/Rectangle-11.png" alt="a surreal image
+            <div class="gallery_grid__eleventh"><img src="/images/home/Rectangle-11.png" alt="a surreal image
             of a hillside tilted sideways; a person walks on the edge of the hillside
             with a balloon"></div>
         </section>
