added project table to projects; fiddled with border mixin

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
     <title>Genesis - Home</title>
     <script src="https://kit.fontawesome.com/8f4cbc2809.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/index.css">
 
 </head>
