--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Genesis - Home</title>
+    <script src="https://kit.fontawesome.com/8f4cbc2809.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/projects.css">
+
 </head>
 <body>
-    
+    <header>
+            <a href="index.html"><img src="/images/Logo.svg" alt="Genesis logo"></a>
+        <nav class="nav_wrapper">
+            <ul>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="intro">
+            <div class="intro__statement">
+            <h2>A fresh new title can make all the difference!</h2>
+            <p>There are many variations of passages of Lorem Ipsum available,
+            but the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.</p> 
+            
+            <p>You need to be sure there isn't anything embarrassing hidden in
+            the middle of text. All the Lorem Ipsum generators on the Internet
+            tend to repeat predefined chunks as necessary, making this the first
+            true generator on the Internet. It uses a dictionary of over 200
+            Latin words, combined with a handful of model sentence
+            structures.</p>
+            </div>
+            <table class="project_stats">
+                <tr>
+                    <td>Project</td>
+                    <td>Genesis Portfolio</td>
+                </tr>
+                <tr>
+                    <td>Design</td>
+                    <td>Bakhtiyar Sattarov</td>
+                </tr>
+                <tr>
+                    <td>Client</td>
+                    <td>Crarftwork</td>
+                </tr>
+                <tr>
+                    <td>Deliverable</td>
+                    <td>Website Design</td>
+                </tr>
+                <tr>
+                    <td>Year</td>
+                    <td>2018</td>
+                </tr>
+                <tr>
+                    <td>Field</td>
+                    <td>Branding, Personal</td>
+                </tr>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <div class="logo_box">
+            <a href="index.html"><img src="/images/Logo.svg" alt="Genesis logo"></a>
+        </div>
+            <nav class="nav_wrapper">
+                <ul>
+                    <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        <div class="socials">
+            <a href="http://www.dribble.com"><i class="fab fa-dribbble"></i></a>
+            <a href="http://www.dribble.com"><i class="fab fa-instagram"></i></a>
+            <a href="http://www.dribble.com"><i class="fab fa-twitter"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
