fixed flex box min-max content issues in layout

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -64,6 +64,13 @@
                 </tr>
             </table>
         </section>
+
+        <section class="project_showcase">
+            <div class="project_showcase__hero">
+                <img src="/images/projects/Image-3.png" alt="a collage image of
+                a woman walking with a yellow sphere behind her on a background of mountains">
+            </div>
+        </section>
     </main>
     <footer>
         <div class="logo_box">
