--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,7 +69,23 @@
             <div class="project_showcase__hero">
                 <img src="/images/projects/Image-3.png" alt="a collage image of
                 a woman walking with a yellow sphere behind her on a background of mountains">
+                <p>There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some
+                form, by injected humour, or randomised words which don't look
+                even slightly believable. If you are going to use a passage of
+                Lorem Ipsum, You need to be sure there isn't anything
+                embarrassing hidden in the middle of text. You need to be sure
+                there isn't anything embarrassing hidden in the middle of
+                text.</p>
             </div>
+            <div><img src="/images/projects/Image-0.png" alt="a surreal image
+            of a hillside tilted sideways; a person walks on the edge of the
+            hillside with a balloon"></div>
+            <div><img src="/images/projects/Image-1.png" alt="flowers on a table
+            with a blackout poetry card reading 'change you'"></div>
+            <div><img src="/images/projects/Image-2.png" alt="a front of a
+            building in blue light with red lines and leaves overlapping"></div>
+            
         </section>
     </main>
     <footer>
