--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Genesis - Projects</title>
+        <script src="https://kit.fontawesome.com/8f4cbc2809.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="/styles/normalize.css">
+        <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/styles/contact.css">
 </head>
 <body>
-    
+    <header>
+        <a href="index.html"><img src="/images/Logo.svg" alt="Genesis logo"></a>
+    <nav class="nav_wrapper">
+        <ul>
+            <li><a href="./projects.html">Projects</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <section class="intro">
+        <div class="intro__statement">
+            <h2>Full set of great features to make your product fresh</h2>
+            <p>Our favorite brands are our friends! We help them to achieve
+            their goals, they help us to stay sharp.</p>
+        </div>
+        <div class="contact_form">
+            <form autocomplete="off" action="">
+                <div class="input-field">
+                    <label for="name">Name</label> 
+                        <input type="text" name="name" required>
+                </div>
+                <div class="input-field">
+                    <label for="email">Email</label> 
+                        <input type="text" name="email" required>
+                </div>
+                <div class="input-field">
+                    <label for="message">Message</label> 
+                        <input type="text" name="message" required>
+                </div>
+                <div>
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+    </section>
+</main>
+<footer>
+    <div class="logo_box">
+        <a href="index.html"><img src="/images/Logo.svg" alt="Genesis logo"></a>
+    </div>
+        <nav class="nav_wrapper">
+            <ul>
+                <li><a href="./projects.html">Projects</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    <div class="socials">
+        <a href="http://www.dribble.com"><i class="fab fa-dribbble"></i></a>
+        <a href="http://www.dribble.com"><i class="fab fa-instagram"></i></a>
+        <a href="http://www.dribble.com"><i class="fab fa-twitter"></i></a>
+    </div>
+</footer>
 </body>
 </html>
