finished up contact page and fixed sass processing issue

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,6 @@
         <title>Genesis - Projects</title>
         <script src="https://kit.fontawesome.com/8f4cbc2809.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/styles/normalize.css">
-        <link rel="stylesheet" href="/styles/main.css">
         <link rel="stylesheet" href="/styles/contact.css">
 </head>
 <body>
@@ -16,7 +15,7 @@
     <nav class="nav_wrapper">
         <ul>
             <li><a href="./projects.html">Projects</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li>Contact</li>
         </ul>
     </nav>
 </header>
@@ -47,6 +46,10 @@
             </form>
         </div>
     </section>
+    <section class="map">
+        <img src="/images/contact/map.png" alt="a map of the broadway triangle
+        and sumner houses neighborhoods with floyd st in the center">
+    </section>
 </main>
 <footer>
     <div class="logo_box">
@@ -55,13 +58,13 @@
         <nav class="nav_wrapper">
             <ul>
                 <li><a href="./projects.html">Projects</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li>Contact</li>
             </ul>
         </nav>
     <div class="socials">
         <a href="http://www.dribble.com"><i class="fab fa-dribbble"></i></a>
-        <a href="http://www.dribble.com"><i class="fab fa-instagram"></i></a>
-        <a href="http://www.dribble.com"><i class="fab fa-twitter"></i></a>
+        <a href="http://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        <a href="http://www.twitter.com"><i class="fab fa-twitter"></i></a>
     </div>
 </footer>
 </body>
