--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,7 +7,6 @@
     <title>Genesis - Projects</title>
     <script src="https://kit.fontawesome.com/8f4cbc2809.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/normalize.css">
-    <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/projects.css">
 
 </head>
@@ -16,7 +15,7 @@
             <a href="index.html"><img src="/images/Logo.svg" alt="Genesis logo"></a>
         <nav class="nav_wrapper">
             <ul>
-                <li><a href="./projects.html">Projects</a></li>
+                <li>Projects</li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -94,14 +93,14 @@
         </div>
             <nav class="nav_wrapper">
                 <ul>
-                    <li><a href="./projects.html">Projects</a></li>
+                    <li>Projects</li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         <div class="socials">
             <a href="http://www.dribble.com"><i class="fab fa-dribbble"></i></a>
-            <a href="http://www.dribble.com"><i class="fab fa-instagram"></i></a>
-            <a href="http://www.dribble.com"><i class="fab fa-twitter"></i></a>
+            <a href="http://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="http://www.twitter.com"><i class="fab fa-twitter"></i></a>
         </div>
     </footer>
 </body>
