--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,6 @@
     <title>Genesis - Home</title>
     <script src="https://kit.fontawesome.com/8f4cbc2809.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/normalize.css">
-    <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/index.css">
 
 </head>
@@ -160,8 +159,8 @@
             </nav>
         <div class="socials">
             <a href="http://www.dribble.com"><i class="fab fa-dribbble"></i></a>
-            <a href="http://www.dribble.com"><i class="fab fa-instagram"></i></a>
-            <a href="http://www.dribble.com"><i class="fab fa-twitter"></i></a>
+            <a href="http://www.instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="http://www.twitter.com"><i class="fab fa-twitter"></i></a>
         </div>
     </footer>
 </body>
