--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,7 +30,7 @@
             <form autocomplete="off" action="">
                 <div class="input-field">
                     <label for="name">Name</label> 
-                        <input type="text" name="name" required>
+                        <input type="text" name="name" autofocus required>
                 </div>
                 <div class="input-field">
                     <label for="email">Email</label> 
